@@ -1,12 +1,18 @@
 package io.openems.edge.core.host;
 
 import java.io.IOException;
+import java.net.Inet4Address;
 import java.net.InetAddress;
 import java.net.UnknownHostException;
+import java.nio.file.Files;
+import java.nio.file.Paths;
+import java.util.Hashtable;
+import java.util.List;
 import java.util.Scanner;
 import java.util.concurrent.CompletableFuture;
 
 import org.osgi.framework.BundleContext;
+import org.osgi.framework.ServiceRegistration;
 import org.osgi.service.cm.ConfigurationAdmin;
 import org.osgi.service.component.ComponentContext;
 import org.osgi.service.component.annotations.Activate;
@@ -16,27 +22,30 @@ import org.osgi.service.component.annotations.Modified;
 import org.osgi.service.component.annotations.Reference;
 import org.osgi.service.metatype.annotations.Designate;
 import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 import io.openems.common.exceptions.OpenemsError.OpenemsNamedException;
 import io.openems.common.exceptions.OpenemsException;
-import io.openems.common.jsonrpc.base.GenericJsonrpcResponseSuccess;
 import io.openems.common.jsonrpc.base.JsonrpcResponseSuccess;
+import io.openems.common.jsonrpc.serialization.EmptyObject;
 import io.openems.common.oem.OpenemsEdgeOem;
 import io.openems.common.session.Role;
 import io.openems.edge.common.component.AbstractOpenemsComponent;
 import io.openems.edge.common.component.OpenemsComponent;
 import io.openems.edge.common.host.Host;
 import io.openems.edge.common.jsonapi.ComponentJsonApi;
+import io.openems.edge.common.jsonapi.EdgeGuards;
 import io.openems.edge.common.jsonapi.EdgeKeys;
 import io.openems.edge.common.jsonapi.JsonApiBuilder;
+import io.openems.edge.common.update.Updateable;
 import io.openems.edge.common.user.User;
 import io.openems.edge.core.host.jsonrpc.ExecuteSystemCommandRequest;
 import io.openems.edge.core.host.jsonrpc.ExecuteSystemRestartRequest;
 import io.openems.edge.core.host.jsonrpc.ExecuteSystemUpdateRequest;
-import io.openems.edge.core.host.jsonrpc.GetNetworkConfigRequest;
-import io.openems.edge.core.host.jsonrpc.GetNetworkConfigResponse;
+import io.openems.edge.core.host.jsonrpc.GetNetworkConfig;
+import io.openems.edge.core.host.jsonrpc.GetNetworkInfo;
 import io.openems.edge.core.host.jsonrpc.GetSystemUpdateStateRequest;
-import io.openems.edge.core.host.jsonrpc.SetNetworkConfigRequest;
+import io.openems.edge.core.host.jsonrpc.SetNetworkConfig;
 
 /**
  * The Host-Component handles access to the host computer and operating system.
@@ -50,7 +59,10 @@ import io.openems.edge.core.host.jsonrpc.SetNetworkConfigRequest;
 		})
 public class HostImpl extends AbstractOpenemsComponent implements Host, OpenemsComponent, ComponentJsonApi {
 
+	private final Logger log = LoggerFactory.getLogger(HostImpl.class);
+
 	protected final OperatingSystem operatingSystem;
+	private ServiceRegistration<Updateable> operatingSystemUpdateable;
 
 	private final DiskSpaceWorker diskSpaceWorker;
 	private final NetworkConfigurationWorker networkConfigurationWorker;
@@ -70,14 +82,9 @@ public class HostImpl extends AbstractOpenemsComponent implements Host, OpenemsC
 				OpenemsComponent.ChannelId.values(), //
 				Host.ChannelId.values() //
 		);
-
+		
 		// Initialize correct Operating System handler
-		if (System.getProperty("os.name").startsWith("Windows")) {
-			this.operatingSystem = new OperatingSystemWindows();
-		} else {
-			this.operatingSystem = new OperatingSystemDebianSystemd(this);
-		}
-
+		this.operatingSystem = this.getCurrentOS();
 		this.diskSpaceWorker = new DiskSpaceWorker(this);
 		this.networkConfigurationWorker = new NetworkConfigurationWorker(this);
 		this.usbConfigurationWorker = new UsbConfigurationWorker(this);
@@ -93,6 +100,13 @@ public class HostImpl extends AbstractOpenemsComponent implements Host, OpenemsC
 				e1.printStackTrace();
 			}
 		}
+
+		this.operatingSystem.getOperatingSystemVersion().whenComplete((name, error) -> {
+			this._setOsVersion(name);
+			if (error != null) {
+				this.log.info("Error while trying to get operating system version", error);
+			}
+		});
 	}
 
 	@Activate
@@ -105,6 +119,12 @@ public class HostImpl extends AbstractOpenemsComponent implements Host, OpenemsC
 		this.diskSpaceWorker.activate(this.id());
 		this.networkConfigurationWorker.activate(this.id());
 		this.usbConfigurationWorker.activate(this.id());
+
+		final var operatingSystemUpdateable = this.operatingSystem.getSystemUpdateable();
+		if (operatingSystemUpdateable != null) {
+			this.operatingSystemUpdateable = bundleContext.registerService(Updateable.class, operatingSystemUpdateable,
+					new Hashtable<>());
+		}
 
 		if (OpenemsComponent.validateSingleton(this.cm, SINGLETON_SERVICE_PID, SINGLETON_COMPONENT_ID)) {
 			return;
@@ -136,19 +156,28 @@ public class HostImpl extends AbstractOpenemsComponent implements Host, OpenemsC
 
 		this.systemUpdateHandler.deactivate();
 
+		final var operatingSystemUpdateable = this.operatingSystemUpdateable;
+		if (operatingSystemUpdateable != null) {
+			operatingSystemUpdateable.unregister();
+		}
+
 		super.deactivate();
 	}
 
 	@Override
 	public void buildJsonApiRoutes(JsonApiBuilder builder) {
-		builder.handleRequest(GetNetworkConfigRequest.METHOD, call -> {
-			return this.handleGetNetworkConfigRequest(call.get(EdgeKeys.USER_KEY),
-					GetNetworkConfigRequest.from(call.getRequest()));
+		builder.handleRequest(new GetNetworkConfig(), endpoint -> {
+			endpoint.setGuards(EdgeGuards.roleIsAtleast(Role.OWNER));
+		}, call -> {
+			return this.handleGetNetworkConfigRequest();
 		});
 
-		builder.handleRequest(SetNetworkConfigRequest.METHOD, call -> {
-			return this.handleSetNetworkConfigRequest(call.get(EdgeKeys.USER_KEY),
-					SetNetworkConfigRequest.from(call.getRequest()));
+		builder.handleRequest(new SetNetworkConfig(), endpoint -> {
+			endpoint.setGuards(EdgeGuards.roleIsAtleast(Role.OWNER));
+		}, call -> {
+			this.handleSetNetworkConfigRequest(call.get(EdgeKeys.USER_KEY), call.getRequest());
+
+			return EmptyObject.INSTANCE;
 		});
 
 		builder.handleRequest(GetSystemUpdateStateRequest.METHOD, call -> {
@@ -170,21 +199,31 @@ public class HostImpl extends AbstractOpenemsComponent implements Host, OpenemsC
 			return this.handleExecuteSystemRestartRequest(call.get(EdgeKeys.USER_KEY),
 					ExecuteSystemRestartRequest.from(call.getRequest())).get();
 		});
+
+		builder.handleRequest(new GetNetworkInfo(), endpoint -> {
+			endpoint.setDescription("""
+					Gets the networkinfo.
+					""".stripIndent());
+
+			endpoint.setGuards(EdgeGuards.roleIsAtleast(Role.OWNER));
+		}, call -> this.operatingSystem.getNetworkInfo());
+
+	}
+
+	@Override
+	public List<Inet4Address> getSystemIPs() throws OpenemsNamedException {
+		return this.operatingSystem.getSystemIPs();
 	}
 
 	/**
 	 * Handles a GetNetworkConfigRequest.
 	 *
-	 * @param user    the User
-	 * @param request the GetNetworkConfigRequest
 	 * @return the Future JSON-RPC Response
 	 * @throws OpenemsNamedException on error
 	 */
-	private GetNetworkConfigResponse handleGetNetworkConfigRequest(User user, GetNetworkConfigRequest request)
-			throws OpenemsNamedException {
-		user.assertRoleIsAtLeast("handleGetNetworkConfigRequest", Role.OWNER);
+	private GetNetworkConfig.Response handleGetNetworkConfigRequest() throws OpenemsNamedException {
 		var config = this.operatingSystem.getNetworkConfiguration();
-		return new GetNetworkConfigResponse(request.getId(), config);
+		return new GetNetworkConfig.Response(config);
 	}
 
 	/**
@@ -192,19 +231,15 @@ public class HostImpl extends AbstractOpenemsComponent implements Host, OpenemsC
 	 *
 	 * @param user    the User
 	 * @param request the SetNetworkConfigRequest
-	 * @return the Future JSON-RPC Response
 	 * @throws OpenemsNamedException on error
 	 */
-	public GenericJsonrpcResponseSuccess handleSetNetworkConfigRequest(User user, SetNetworkConfigRequest request)
+	public void handleSetNetworkConfigRequest(User user, SetNetworkConfig.Request request)
 			throws OpenemsNamedException {
-		user.assertRoleIsAtLeast("handleSetNetworkConfigRequest", Role.OWNER);
 		var oldNetworkConfiguration = this.operatingSystem.getNetworkConfiguration();
 		this.operatingSystem.handleSetNetworkConfigRequest(user, oldNetworkConfiguration, request);
 
 		// Notify NetworkConfigurationWorker about the change
 		this.networkConfigurationWorker.triggerNextRun();
-
-		return new GenericJsonrpcResponseSuccess(request.getId());
 	}
 
 	/**
@@ -288,8 +323,29 @@ public class HostImpl extends AbstractOpenemsComponent implements Host, OpenemsC
 	 * @throws IOException on error
 	 */
 	private static String execReadToString(String execCommand) throws IOException {
-		try (var s = new Scanner(Runtime.getRuntime().exec(execCommand).getInputStream()).useDelimiter("\\A")) {
+		ProcessBuilder processBuilder = new ProcessBuilder(execCommand.split(" "));
+		processBuilder.redirectErrorStream(true);
+		Process process = processBuilder.start();
+
+		try (var s = new Scanner(process.getInputStream()).useDelimiter("\\A")) {
 			return s.hasNext() ? s.next().trim() : "";
 		}
 	}
+	
+	private OperatingSystem getCurrentOS() {
+		if (Files.exists(Paths.get("/.dockerenv"))) {
+			return new OperatingSystemDocker();
+		}
+		
+		final String osName = System.getProperty("os.name");
+
+        if (osName.startsWith("Windows")) {
+            return new OperatingSystemWindows();
+        } else if (osName.startsWith("Mac")) {
+            return new OperatingSystemMac();
+        }
+		
+		return new OperatingSystemDebianSystemd(this);
+	}
+
 }
